[package]
name = "wuwa-fps-unlocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.56.0"
inquire = "0.7.5"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
sysinfo = "0.30.12"
termcolor = "1.4.1"
tinyfiledialogs = "3.9.1"
